- ensure header image and the navigation bar not overlapped by the chat

--- a/app/content/themes/default/css/style.css
+++ b/app/content/themes/default/css/style.css
@@ -1655,10 +1655,8 @@ body.modal-open .top-bar {
 }
 
 /* -- */
-@media (min-width: 1200px) {
-  .main-wrapper,
-  .top-bar,
-  .main-header {
+@media (min-width: 1200px ) {
+  .main-wrapper {
     padding-right: 210px;
   }
 
@@ -5243,6 +5241,7 @@ body.night-mode .add-story .add {
   top: 0;
   bottom: 0;
   width: 210px;
+  top: 390px;
   box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
   z-index: 1002;
 }
